[package]
name = "rust-fearless-concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"

[workspace]
members = [ "atomics", "channels", "deviding-workloads-in-threads", "mutexes", "rayon_iter", "rwlocks", "scoped-thread","sharing-data-in-threads", "thread-builder-pattern", "thread-parking", "work-queue"]
